// Copyright 2018 The gVisor Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gvisor;

import "pkg/sentry/arch/registers.proto";

message UncaughtSignal {
  // Thread ID.
  int32 tid = 1;

  // Process ID.
  int32 pid = 2;

  // Registers at the time of the fault or signal.
  Registers registers = 3;

  // Signal number.
  int32 signal_number = 4;

  // The memory location which caused the fault (set if applicable, 0
  // otherwise). This will be set for SIGILL, SIGFPE, SIGSEGV, and SIGBUS.
  uint64 fault_addr = 5;
}
